# ears-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/alfalfa/: io.rs  mod.rs
src/alfalfa/utils/: erase_utils.rs  mod.rs
src/features/: mod.rs
src/features/data/: ear.rs  mod.rs  snout.rs  tail.rs  wing.rs
src/parser/: mod.rs  utils.rs
src/parser/v0/: macros.rs  magic_pixels.rs  mod.rs  parser.rs  writer.rs
src/parser/v1/: bit_input_stream.rs  bit_reader.rs  mod.rs  parser.rs  writer.rs
src/utils/: alpha.rs  bit_reader.rs  bit_writer.rs  cape.rs  emissive.rs  eraser.rs  errors.rs  legacy_upgrader.rs  mod.rs  model.rs
