[package]
name = "ears-rs"
description = "A Rust based library to read Ears mod data from Minecraft skins"
version = "0.1.1"
edition = "2021"
authors = ["NickAcPT"]

[dependencies]
image = { version = "0.24", default-features = false, features = ["png"] }
ibig = "0.3"
itertools = "0.11"
thiserror = "1"
enum-ordinalize = "3.1"
byteorder = "1"