[package]
name = "ears-rs"
description = "A Rust based library to read Ears mod data from Minecraft skins"
version = "0.2.0"
edition = "2021"
authors = ["NickAcPT"]

[dependencies]
image = { version = "0.25.0", default-features = false }
ibig = "^0.3"
itertools = "0.12.1"
thiserror = "^1"
enum-ordinalize = "4.3.0"
byteorder = "1.5.0"

[dev-dependencies]
image = { version = "0.25.0", default-features = false, features = ["png"] }